# whisper.cpp

./: .gitignore  Makefile
examples/stream/: CMakeLists.txt  stream.cpp
examples/talk-llama/: FtxUI.cpp  FtxUI.h  FtxuiUI.cpp  llama.cpp  talk-llama.cpp
